--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "express": "^4.16.2",
+    "faker": "^4.1.0",
     "jasmine": "^3.0.0",
     "request": "^2.83.0"
   },
